# shooter-mp

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  DEPENDENCIES.md  README.md  compile_commands.json  config.json  config1.json  config2.json  runclient.sh  runentry.sh  runredis.sh  runserver.sh
client/: CMakeLists.txt  launch.json
client/src/: Bullet.cpp  Bullet.hpp  GameEvents.hpp  GameObject.cpp  GameObject.hpp  GameObject.inl  NetworkClient.cpp  NetworkClient.hpp  Player.cpp  Player.hpp  Scene.cpp  Scene.hpp  Wall.cpp  Wall.hpp  main.cpp
entrypoint/: CMakeLists.txt  launch.json
entrypoint/src/: EntryServer.cpp  EntryServer.hpp  main.cpp
server/: CMakeLists.txt  launch.json
server/src/: GameServer.cpp  GameServer.hpp  main.cpp
shared/: CMakeLists.txt
shared/src/: Components.cpp  Components.hpp  ServerBase.cpp  ServerBase.hpp  SessionOptions.hpp  Typedefs.hpp
